--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
         <div class="container">
             <div class="profile-container">
                 <div class="profile-image">
-                    <img src="https://drive.google.com/uc?id=1JWaaoFiwvcWAD9mAitkp_DtOfou0CGHZ" alt="Samantha Melchin" />
+                    <img src="https://i.imgur.com/TTGnzHd.jpeg" alt="Samantha Melchin" />
                 </div>
                 <div class="profile-content">
                     <h1>Samantha Melchin</h1>
