--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
         
         <section>
             <h2>MAIR LinkedIn Ad Campaign</h2>
-            <p>These ads represented our strongest-performing digital campaign, consistently generating exceptional engagement. The series highlighting program flexibility, career outcomes, and Boston location advantages drove a remarkable 67% increase in inquiries during their run. Each ad was strategically focused on unique value propositions including program customization and diverse career paths.</p>
+            <p> I  managed the entire process from concept to execution—developing strategic messaging. My comprehensive role included creative development, A/B testing of visual and messaging elements, technical implementation, performance analysis, and continuous optimization. These ads represented Pardee School's strongest-performing digital campaign, consistently generating exceptional engagement. The series highlighting program flexibility, career outcomes, and Boston location advantages drove a remarkable 67% increase in inquiries during their run. Each ad was strategically focused on unique value propositions including program customization and diverse career paths.</p>
             
             <div class="project-links">
                 <a href="https://drive.google.com/file/d/1gwWSTgkQPPhNGNuunoYsGria-BBbP_OJ/view?usp=drive_link" target="_blank" class="project-link">
