--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
                 <a href="https://www.linkedin.com/in/samantha-melchin-163b30174/" target="_blank">In</a>
             </div>
             
-            <p class="copyright">© 2025 Samantha Melchin. All rights reserved.</p>
+            <p class="copyright">© 2025 Samantha Melchin. Designed and hand-coded by Samantha Melchin. All rights reserved.</p>
         </div>
     </footer>
 </body>
