--- a/index.html
+++ b/index.html
@@ -417,11 +417,11 @@
             <div class="project-links">
                 <a href="https://drive.google.com/file/d/1cB1vKRVmyDqCHFpLXJyLixzw6a0ZUb0f/view?usp=drive_link" target="_blank" class="project-link">
                     <h4>Poster Concept 1</h4>
-                    <p>Bold teaser version for in-studio signage</p>
+                    <p>Bold retro gossip version for in-studio signage</p>
                 </a>
                 <a href="https://drive.google.com/file/d/1ajawNAACg-LS9iR-HCfGdLanbFEggUWK/view?usp=drive_link" target="_blank" class="project-link">
                     <h4>Poster Concept 2</h4>
-                    <p>Emotional version for digital & community marketing</p>
+                    <p>Bold retro gossip version for in-studio signage varation 2</p>
                 </a>
             </div>
         </section>
