--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
         
         <section>
             <h2>New England Aquarium MBTA Campaign</h2>
-            <p>Conceptual out-of-home campaign designed for the Boston transit system. These mockups present a playful approach to promoting the aquarium by connecting sea creatures to relatable MBTA experiences.</p>
+            <p>Conceptual out-of-home campaign designed for the Boston transit system. These mockups are meant to represent the idea only (not any type of design work) and present a playful approach to promoting the aquarium by connecting sea creatures to relatable MBTA experiences.</p>
             
             <div class="project-links">
                 <a href="https://drive.google.com/file/d/1llz-r_1hYrYfoBJ_22FaEdXEyjYsGQJ-/view?usp=drive_link" target="_blank" class="project-link">
